# HadronsJobBuilder

./: .gitignore  launch_chatbot.sh  pyproject.toml  test_workflow_manager.py  workflow.py
hadrons_config/: __init__.py  action_config.py  agent.py  common.py  eigenvectors.py  gauge.py  hadrons_xml.py  observable_config.py  observable_info.py  propagator_config.py  solver_config.py  source_config.py  state.py  workflow_manager.py
main/: gui.py  workflow.py
src/femtomeas/: __init__.py
src/femtomeas/agent_common/: agent_base.py  common.py  print_pydantic_markdown.py
src/femtomeas/gui/: frontend.py  server.py  utils.py
src/femtomeas/gui/assets/: custom.css
src/femtomeas/gui/frontend_content/: chat_tab.py  configure_page.py  user_input_popup.py  workflow_monitor.py
src/femtomeas/meas_config_agent/: action_config.py  agent.py  common.py  eigenvectors.py  gauge.py  hadrons_xml.py  observable_config.py  observable_info.py  print_pydantic_markdown.py  propagator_config.py  solver_config.py  source_config.py  state.py
src/femtomeas/workflow_manager/: agent.py  api_general.py  api_tools.py  globals.py  hadrons.py  hadrons_workflow.py  iri_api.py  iri_sfapi_hybrid.py  logging.py  manager.py  manager_config.py  sfapi.py  spoof_api.py  utils.py  workflow_manager.py
test/: auto_evaluate.py  test_api_wrappers.py  test_submission_agent.py  test_workflow_manager.py
