[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "FemtoMeas"
version = "0.1.0"
dependencies = [
  "langchain",
  "langchain_openai",
  "pathlib",
  "sfapi_client",
  "globus_sdk",
  "dash",
  "dash-chat",
  "dash-bootstrap-components",
  "dash-extensions",
  "dash-ag-grid",
  "fastapi",
  "uvicorn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]